kubernetes/apps/base/headlamp/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: headlamp
spec:
  ingressClassName: traefik
  rules:
    - host: "headlamp.${cluster_domain}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headlamp
                port:
                  number: 80
